--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"@fontsource/roboto": "^5.1.1"
+		"@fontsource/roboto": "^5.1.1",
+		"slugify": "^1.6.6"
 	}
 }
