--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"dependencies": {
 		"@fontsource/roboto": "^5.1.1",
+		"@vercel/speed-insights": "^1.2.0",
 		"dns": "^0.2.2",
 		"net": "^1.0.2",
 		"slugify": "^1.6.6"
