--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"dependencies": {
 		"@fontsource/roboto": "^5.1.1",
 		"@vercel/speed-insights": "^1.2.0",
+		"date-fns": "^4.1.0",
 		"dns": "^0.2.2",
 		"net": "^1.0.2",
 		"slugify": "^1.6.6"
