--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint .",
 		"static": "http-server static -p 2525 --cors",
-		"cron": "ts-node cron.ts"
+		"cron": "bun run cron.ts"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -27,7 +27,6 @@
 		"http-server": "^14.1.1",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"ts-node": "^10.9.2",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0"
@@ -36,8 +35,6 @@
 		"@fontsource/roboto": "^5.1.1",
 		"@vercel/speed-insights": "^1.2.0",
 		"date-fns": "^4.1.0",
-		"dns": "^0.2.2",
-		"net": "^1.0.2",
 		"slugify": "^1.6.6"
 	}
 }
