Add vercel analytics

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	},
 	"dependencies": {
 		"@fontsource/roboto": "^5.1.1",
+		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.2.0",
 		"date-fns": "^4.1.0",
 		"slugify": "^1.6.6"
