--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint .",
-		"static": "http-server static -p 2525 --cors",
-		"cron": "bun run cron.ts"
+		"static": "http-server static -p 2525 --cors"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
